--- a/sass/main.css
+++ b/sass/main.css
@@ -1777,6 +1777,35 @@ img {
   pointer-events: none;
 }
 
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    position: fixed;
+    align-items: center;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition-property: opacity, visibility;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    min-height: 581px;
+    background-color: #fff;
+  }
+  .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+}
 .modal__close-btn {
   position: absolute;
   top: 8px;
@@ -1927,8 +1956,8 @@ img {
 .hamburger {
   display: flex;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 23px;
+  right: 20px;
 }
 .hamburger__button-open {
   width: 24px;
