--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -11,7 +11,21 @@
   padding-top: 60px;
   margin-left: 0px;
 }
-@media sreen and (min-width: 768px) and (max-width: 1199px) {
+
+.social-list__heading {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+  display: block;
+  flex-basis: 100%;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-newsletter__heading {
     font-weight: 700;
     font-size: 14px;
@@ -25,6 +39,18 @@
     padding-top: 60px;
     margin-left: 0px;
   }
+  .social-list__heading {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+  display: block;
+  flex-basis: 100%;
+  margin-bottom: 20px;
+  text-align: center;
+}
 }
 
 @media screen and (min-width: 1200px) {
@@ -64,4 +90,5 @@
   display: block;
   flex-basis: 100%;
   margin-bottom: 20px;
+
 }
