--- a/sass/main.css
+++ b/sass/main.css
@@ -92,7 +92,7 @@ img {
 
 .footer-logo {
   max-width: 480px;
-  padding-top: 60px;
+  padding-top: 0px;
   padding-bottom: 60px;
   text-align: center;
 }
@@ -100,7 +100,7 @@ img {
 .footer-social {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 60px;
+  margin-bottom: 0px;
   justify-content: center;
 }
 
@@ -174,6 +174,7 @@ img {
   }
   .footer-logo {
     min-width: 280px;
+    padding-top: 60px;
     padding-bottom: 60px;
     text-align: start;
   }
@@ -603,7 +604,20 @@ img {
   margin-left: 0px;
 }
 
-@media sreen and (min-width: 768px) and (max-width: 1199px) {
+.social-list__heading {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+  display: block;
+  flex-basis: 100%;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-newsletter__heading {
     font-weight: 700;
     font-size: 14px;
@@ -616,6 +630,18 @@ img {
     text-align: center;
     padding-top: 60px;
     margin-left: 0px;
+  }
+  .social-list__heading {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #fff;
+    display: block;
+    flex-basis: 100%;
+    margin-bottom: 20px;
+    text-align: center;
   }
 }
 @media screen and (min-width: 1200px) {
