--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,12 +1,13 @@
 .footer-newsletter-form__form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   align-items: center;
+  width: 100%;
 }
 .footer-newsletter-form {
   display: flex;
   align-items: center;
+  width: 100%;
 
   &__input {
     font-family: "Roboto";
@@ -15,14 +16,13 @@
     font-style: 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    width: 450px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0);
     background-color: rgba(0, 0, 0, 0);
     color: #757575;
     padding: 16px;
     margin-bottom: 20px;
-    width: 358px;
+    width: 100%;
   }
 }
 .newsletter-btn {
@@ -74,7 +74,7 @@
       color: #757575;
       padding: 16px;
       margin-bottom: 20px;
-      width: 358px;
+      max-width: 358px;
     }
   }
   .newsletter-btn {
