--- a/sass/components/_lorem-ipsum__list.scss
+++ b/sass/components/_lorem-ipsum__list.scss
@@ -72,7 +72,7 @@ width: 100%;
       width: calc(50% - 30px);
     }
     &__content {
-      max-width: 450px;
+      width: 100%;
       height: 120px;
       border-radius: 4px;
       background-color: var(--background-color);
