--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,24 +1,22 @@
 .backdrop {
   position: fixed;
-  align-items: center;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition-property: opacity, visibility;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .modal {
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1.25);
   background-color: #fff;
+  width: 70%;
+  height: 609px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 .is-hidden {
   opacity: 0;
