--- a/sass/main.css
+++ b/sass/main.css
@@ -958,7 +958,7 @@ img {
     width: calc(50% - 30px);
   }
   .lorem-ipsum__content {
-    max-width: 450px;
+    width: 100%;
     height: 120px;
     border-radius: 4px;
     background-color: var(--background-color);
@@ -1284,13 +1284,14 @@ img {
 .footer-newsletter-form__form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   align-items: center;
+  width: 100%;
 }
 
 .footer-newsletter-form {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 .footer-newsletter-form__input {
   font-family: "Roboto";
@@ -1299,14 +1300,13 @@ img {
   font-style: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  width: 450px;
   height: 50px;
   background-color: rgba(0, 0, 0, 0);
   background-color: rgba(0, 0, 0, 0);
   color: #757575;
   padding: 16px;
   margin-bottom: 20px;
-  width: 358px;
+  width: 100%;
 }
 
 .newsletter-btn {
@@ -1357,7 +1357,7 @@ img {
     color: #757575;
     padding: 16px;
     margin-bottom: 20px;
-    width: 358px;
+    max-width: 358px;
   }
   .newsletter-btn {
     font-family: "Roboto";
@@ -1778,26 +1778,23 @@ img {
 }
 .backdrop {
   position: fixed;
-  align-items: center;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition-property: opacity, visibility;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .modal {
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1.25);
   background-color: #fff;
+  width: 70%;
+  height: 609px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .is-hidden {
@@ -1872,7 +1869,6 @@ img {
   fill: var(--brand-color);
 }
 .modal-form__textarea {
-  width: 448px;
   height: 120px;
   padding: 12px 18px;
   resize: none;
@@ -1958,6 +1954,101 @@ img {
   display: block;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    position: relative;
+  }
+  .modal-form__label {
+    font-size: 12px;
+    color: var(--secondary-font-color);
+    margin-bottom: 4px;
+    margin-top: 10px;
+  }
+  .modal-form__label:focus-within {
+    fill: var(--brand-color);
+  }
+  .modal-form__textarea {
+    width: 448px;
+    height: 120px;
+    padding: 12px 18px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
+  .label:required {
+    border-color: none;
+  }
+  .modal-form-policy__label::before {
+    display: inline-block;
+    margin-top: 10px;
+    content: "";
+    width: 16px;
+    height: 16px;
+    border: 1px solid #000;
+    transition: all 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-policy:checked + .modal-form-policy__label::before {
+    background-color: var(--brand-color);
+    border: none;
+    background-image: url(../images/checked.svg);
+  }
+  .privacy-container__link {
+    color: var(--brand-color);
+    text-decoration: underline;
+  }
+  .modal-form__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    background: var(--brand-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #fff;
+    margin: auto;
+    margin-top: 30px;
+    border: none;
+  }
+  .modal-form__button:hover, .modal-form__button:focus {
+    cursor: pointer;
+  }
+  .modal-form__input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    width: 448px;
+    height: 40px;
+    padding-left: 42px;
+  }
+  .modal-form__input:focus,
+.modal-form__textarea:focus {
+    border: 1px solid var(--brand-color);
+    outline: none;
+  }
+  .modal-form__input:hover,
+.modal-form__textarea:hover {
+    border: 1px solid var(--brand-color);
+    border-radius: 4px;
+  }
+  .modal-form__input,
+.modal-form__textarea {
+    color: var(--secondary-font-color);
+    font-family: "roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    display: block;
+  }
+}
 .modal-form__icon {
   width: 18px;
   height: 18px;
