--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -17,6 +17,7 @@
   }
 
   &__textarea {
+    max-width: 448px;
     height: 120px;
     padding: 12px 18px;
     resize: none;
@@ -73,7 +74,7 @@
 .modal-form__input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  width: 448px;
+  max-width: 448px;
   height: 40px;
   padding-left: 42px;
 }
@@ -98,6 +99,30 @@
   font-size: 12px;
   display: block;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (min-width: 1200px) {
 .modal-form {
   display: flex;
