--- a/sass/main.css
+++ b/sass/main.css
@@ -1869,6 +1869,7 @@ img {
   fill: var(--brand-color);
 }
 .modal-form__textarea {
+  max-width: 448px;
   height: 120px;
   padding: 12px 18px;
   resize: none;
@@ -1927,7 +1928,7 @@ img {
 .modal-form__input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  width: 448px;
+  max-width: 448px;
   height: 40px;
   padding-left: 42px;
 }
