--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -10,6 +10,7 @@
     color: var(--secondary-font-color);
     margin-bottom: 4px;
     margin-top: 10px;
+    width: 370px;
 
     &:focus-within {
       fill: var(--brand-color);
@@ -17,7 +18,7 @@
   }
 
   &__textarea {
-    max-width: 448px;
+    width: 370px;
     height: 120px;
     padding: 12px 18px;
     resize: none;
@@ -74,7 +75,7 @@
 .modal-form__input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  max-width: 448px;
+  width: 100%;
   height: 40px;
   padding-left: 42px;
 }
@@ -136,6 +137,8 @@
     color: var(--secondary-font-color);
     margin-bottom: 4px;
     margin-top: 10px;
+    margin-right: 70px;
+    width: 370px;
 
     &:focus-within {
       fill: var(--brand-color);
