--- a/sass/main.css
+++ b/sass/main.css
@@ -1864,12 +1864,13 @@ img {
   color: var(--secondary-font-color);
   margin-bottom: 4px;
   margin-top: 10px;
+  width: 370px;
 }
 .modal-form__label:focus-within {
   fill: var(--brand-color);
 }
 .modal-form__textarea {
-  max-width: 448px;
+  width: 370px;
   height: 120px;
   padding: 12px 18px;
   resize: none;
@@ -1928,7 +1929,7 @@ img {
 .modal-form__input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  max-width: 448px;
+  width: 100%;
   height: 40px;
   padding-left: 42px;
 }
@@ -1968,6 +1969,8 @@ img {
     color: var(--secondary-font-color);
     margin-bottom: 4px;
     margin-top: 10px;
+    margin-right: 70px;
+    width: 370px;
   }
   .modal-form__label:focus-within {
     fill: var(--brand-color);
